[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hypothesis_bio"
dist-name = "hypothesis-bio"
author = "Luiz Irber"
author-email = "contact@luizirber.org"
home-page = "https://github.com/luizirber/hypothesis-bio"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Hypothesis",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Testing",
]
requires = [
    "hypothesis >= 4.0.0"
]
requires-python = ">=3.5"
description-file = "README.md"

[tool.flit.metadata.requires-extra]
testing= [
    "pytest >=2.7.3",
    "pytest-cov",
]
docs = [
    "sphinx >= 2.0.0, < 3",
    "pygments-github-lexers >= 0.0.5",
    "sphinxcontrib-autoprogram >= 0.1.5",
]
